test/library/standard/GMP/mpf_get_str-mismatch.good
mpf_get_str-mismatch.chpl:14: error: Cannot assign to int(32) from int(64)
